--- a/backend/package.json
+++ b/backend/package.json
@@ -10,15 +10,16 @@
   },
   "dependencies": {
     "bcrypt-nodejs": "0.0.3",
+    "bcryptjs": "2.4.0",
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.2",
     "cookie-parser": "~1.4.3",
     "csv-parse": "1.1.7",
     "debug": "~2.2.0",
     "express": "~4.14.0",
-    "express-jwt": "^5.1.0",
+    "express-jwt": "5.1.0",
     "express-unless": "*",
-    "jsonwebtoken": "^7.2.1",
+    "jsonwebtoken": "7.2.1",
     "mongoose": "4.7.5",
     "morgan": "~1.7.0",
     "multer": "1.2.1",
