--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "angular": "^1.5.0",
+    "angular-jwt": "^0.1.8",
     "angular-simple-logger": "^0.1.7",
     "angular-ui-router": "^0.3.2",
     "bootstrap": "^3.3.7",
