--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "angular-jwt": "^0.1.8",
     "angular-simple-logger": "^0.1.7",
     "angular-ui-router": "^0.3.2",
+    "angular-validation-match": "^1.9.0",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
     "normalize.css": "^5.0.0",
