--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,7 +10,7 @@ server {
   }
 
   location /api/ {
-    proxy_pass       http://backend:3000;
+    proxy_pass       http://backend:3000/;
     proxy_set_header Host            $host;
     proxy_set_header X-Forwarded-For $remote_addr;
   }
