--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "angular": "^1.5.0",
     "angular-jwt": "^0.1.8",
     "angular-simple-logger": "^0.1.7",
+    "angular-ui-bootstrap": "^2.4.0",
     "angular-ui-router": "^0.3.2",
     "angular-validation-match": "^1.9.0",
     "bootstrap": "^3.3.7",
